# findllm

./: .gitignore  README.md  example01.md  example02.md  main.py  pyproject.toml
src/findllm/: __init__.py
src/llmcheck/: __init__.py
