[project]
name = "findllm"
version = "0.1.2"
description = "Detect AI-generated text using GPT-2 token prediction analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "rich>=14.2.0",
    "textual>=6.6.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]

[project.optional-dependencies]
markitdown = ["markitdown[all]"]

[project.scripts]
findllm = "findllm:app"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
